--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -107,3 +107,33 @@ body{
         transform: rotate(360deg) scale(1)
     }
 }
+
+.fade-enter {
+  opacity: 0;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
+
+.slide-enter {
+  transform: translateX(-100%);
+}
+.slide-enter-active {
+  transform: translateX(100%);
+  transition: opacity 500ms ease-in;
+}
+.slide-exit {
+  transform: translateX(100%);
+}
+.slide-exit-active {
+  transform: translateX(-100%);
+  transition: opacity 500ms ease-in;
+}
